// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="sc-AxhUy YnAIG"
>
  <input
    className="sc-AxirZ hLnVGF sc-AxgMl iHEIpk"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-AxheI iRXQBq"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy YnAIG"
>
  <input
    className="sc-AxirZ hLnVGF sc-AxgMl iHEIpk"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="sc-AxheI cXfyQO"
    disabled={true}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy YnAIG"
>
  <input
    className="sc-AxirZ hdggzc sc-AxgMl iHEIpk"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-AxheI eSFmUZ"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy YnAIG"
>
  <input
    className="sc-AxirZ hLnVGF sc-AxgMl iHEIpk"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="sc-AxheI iRXQBq"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy YnAIG"
>
  <input
    className="sc-AxirZ AJCco sc-AxgMl iHEIpk"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-AxheI jbUhyH"
    disabled={false}
  >
    λ
  </span>
</div>
`;
